# semantic-search

./: README.md  docker-compose.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/src/app/: api.py  config.py  embedding_client.py  retry.py  vector_client.py
db/: postgresql_init.sql
embedding/: Dockerfile  README.md  pyproject.toml
embedding-service/: Dockerfile  pyproject.toml
embedding-service/src/embedding_service/: api.py  model.py
embedding/src/embedder/: article_repo.py  main.py  vector_repo.py  worker.py
embedding/tests/: test_embedding_worker.py
ingestion/: Dockerfile  README.md  pyproject.toml
ingestion/ingest_etl/: config.py  crawler.py  main.py  sink.py
ingestion/tests/: test_crawler.py
